online ordering and menu created

--- a/src/app/catalogo/catalogo.page.html
+++ b/src/app/catalogo/catalogo.page.html
@@ -14,43 +14,42 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>Pizzas</ion-card-title>
-        <ion-card-subtitle>Selecciona el sabor de pizza que desees</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://www.recetascocinar.org/wp-content/uploads/2011/04/pizza-de-carne-picada.jpg" />
+              <img src="https://www.recetascocinar.org/wp-content/uploads/2011/04/pizza-de-carne-picada.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Carnes</ion-checkbox>
-          </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://elmen.pe/wp-content/uploads/2023/05/Pizza-hawaiana.jpg" />
-            </ion-thumbnail>
-            <ion-checkbox justify="space-between">Hawaina</ion-checkbox>
-          </ion-item>
-    
-          <ion-item>
-            <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://mandolina.co/wp-content/uploads/2023/05/Pizza-Napolitana-Autentica.png" />
-            </ion-thumbnail>
-            <ion-checkbox justify="space-between">Napolitana</ion-checkbox>
+            <ion-text justify="space-between">Carnes</ion-text>
           </ion-item>
 
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://ilforno.co/cdn/shop/products/ecommerceilfornopizzapolloychampinones-Familiar_992x.png?v=1672240146" />
+              <img src="https://elmen.pe/wp-content/uploads/2023/05/Pizza-hawaiana.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Pollo y champiñones</ion-checkbox>
+            <ion-text justify="space-between">Hawaiana</ion-text>
+          </ion-item>
+    
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img src="https://mandolina.co/wp-content/uploads/2023/05/Pizza-Napolitana-Autentica.png" />
+            </ion-thumbnail>
+            <ion-text justify="space-between">Napolitana</ion-text>
+          </ion-item>
+
+          <ion-item>
+            <ion-thumbnail slot="start">
+              <img src="https://ilforno.co/cdn/shop/products/ecommerceilfornopizzapolloychampinones-Familiar_992x.png?v=1672240146" />
+            </ion-thumbnail>
+            <ion-text justify="space-between">Pollo y champiñones</ion-text>
           </ion-item>
     
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://images.ecestaticos.com/WJT0BFvdZ4poZa5PiFHuCXX2sTo=/0x0:2121x1414/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F96f%2F563%2Fc84%2F96f563c8404ac8cd97c158887aa56ae1.jpg" />
+              <img src="https://images.ecestaticos.com/WJT0BFvdZ4poZa5PiFHuCXX2sTo=/0x0:2121x1414/1200x900/filters:fill(white):format(jpg)/f.elconfidencial.com%2Foriginal%2F96f%2F563%2Fc84%2F96f563c8404ac8cd97c158887aa56ae1.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Pepperoni</ion-checkbox>
+            <ion-text justify="space-between">Pepperoni</ion-text>
           </ion-item>
         </ion-list>
       </ion-card-content>
@@ -59,36 +58,35 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>Tamaño Pizzas</ion-card-title>
-        <ion-card-subtitle>Selecciona el tamaño de tu pizza</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://d4i7e0edqqgwm.cloudfront.net/documents/producto/420pepperoni-personal-5fb4318d7f6fa343145323.jpg" />
+              <img src="https://d4i7e0edqqgwm.cloudfront.net/documents/producto/420pepperoni-personal-5fb4318d7f6fa343145323.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Personal (4 trozos)</ion-checkbox>
+            <ion-text justify="space-between">Pequeña (4 trozos)</ion-text>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://blog.papajohns.com.gt/hs-fs/hubfs/Blogs%202023/Marzo/Pizzas%20al%20Chilazo/Pizza%20Mediana%20de%20Pepperoni.jpg?width=500&height=303&name=Pizza%20Mediana%20de%20Pepperoni.jpg" />
+              <img src="https://blog.papajohns.com.gt/hs-fs/hubfs/Blogs%202023/Marzo/Pizzas%20al%20Chilazo/Pizza%20Mediana%20de%20Pepperoni.jpg?width=500&height=303&name=Pizza%20Mediana%20de%20Pepperoni.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Mediana (6 trozos)</ion-checkbox>
+            <ion-text justify="space-between">Mediana (6 trozos)</ion-text>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://www.pizzaiolo.mx/img/blog/pizza-hecha-de-varios-tipos-de-pizza-02%20(1).png" />
+              <img src="https://www.pizzaiolo.mx/img/blog/pizza-hecha-de-varios-tipos-de-pizza-02%20(1).png" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Grande (8 trozos)</ion-checkbox>
+            <ion-text justify="space-between">Grande (8 trozos)</ion-text>
           </ion-item>
     
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://www.magazinedigital.cl/wp-content/uploads/2023/02/Super-Pepperoni_1.jpg" />
+              <img src="https://www.magazinedigital.cl/wp-content/uploads/2023/02/Super-Pepperoni_1.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Familiar (10 trozos)</ion-checkbox>
+            <ion-text justify="space-between">Familiar (10 trozos)</ion-text>
           </ion-item>
         </ion-list>
       </ion-card-content>
@@ -97,43 +95,42 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>Bebida</ion-card-title>
-        <ion-card-subtitle>Selecciona la bebida con la que deseas acompañar tu crazy pizza</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://copservir.vtexassets.com/arquivos/ids/765000/GINGER-CANADA-DRY_F.png?v=637950273511400000" />
+              <img src="https://copservir.vtexassets.com/arquivos/ids/765000/GINGER-CANADA-DRY_F.png?v=637950273511400000" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Canada Dry 1.5L</ion-checkbox>
+            <ion-text justify="space-between">Canada Dry 1.5L</ion-text>
           </ion-item>
           
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://licoreslarebaja.com/173-large_default/gaseosa-coca-cola-15ml.jpg" />
+              <img src="https://licoreslarebaja.com/173-large_default/gaseosa-coca-cola-15ml.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Coca cola 1.5L</ion-checkbox>
+            <ion-text justify="space-between">Coca-Cola 1.5L</ion-text>
           </ion-item>
     
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://misaboracolombia.com/cdn/shop/products/Colombiana_la_nuestra_pet_3_125lt_800px_800x.png?v=1576124798" />
+              <img src="https://misaboracolombia.com/cdn/shop/products/Colombiana_la_nuestra_pet_3_125lt_800px_800x.png?v=1576124798" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Colombiana 1.5L</ion-checkbox>
+            <ion-text justify="space-between">Colombiana 1.5L</ion-text>
           </ion-item>
 
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://copservir.vtexassets.com/arquivos/ids/765422/GASEOSA-MANZANA-POSTOBON_F.png?v=637950275205400000" />
+              <img src="https://copservir.vtexassets.com/arquivos/ids/765422/GASEOSA-MANZANA-POSTOBON_F.png?v=637950275205400000" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Postobon Manzana 1.5L</ion-checkbox>
+            <ion-text justify="space-between">Manzana Postobon 1.5L</ion-text>
           </ion-item>
 
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://copservir.vtexassets.com/arquivos/ids/769778/GASEOSA-SPRITE_F.png?v=637951117939600000" />
+              <img src="https://copservir.vtexassets.com/arquivos/ids/769778/GASEOSA-SPRITE_F.png?v=637951117939600000" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Sprite 1.5L</ion-checkbox>
+            <ion-text justify="space-between">Sprite 1.5L</ion-text>
           </ion-item>
         </ion-list>
       </ion-card-content>
@@ -142,43 +139,42 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>Ingredientes Adicionales</ion-card-title>
-        <ion-card-subtitle>Selecciona ingredientes adicionales para personalizar tu pizza</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://content-cocina.lecturas.com/medio/2022/01/12/pizza-papa-johns-pepperoni_64bd69fe_1200x1200.jpg" />
+              <img src="https://content-cocina.lecturas.com/medio/2022/01/12/pizza-papa-johns-pepperoni_64bd69fe_1200x1200.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Borde con queso</ion-checkbox>
+            <ion-text justify="space-between">Borde con queso</ion-text>
           </ion-item>
 
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://pbs.twimg.com/media/B_66g7tUQAAj8EH.jpg:large" />
+              <img src="https://pbs.twimg.com/media/B_66g7tUQAAj8EH.jpg:large" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Doble queso</ion-checkbox>
+            <ion-text justify="space-between">Doble queso</ion-text>
           </ion-item>
               
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://s.cornershopapp.com/product-images/4456401.jpg?versionId=pTLQK2I43EAQLVfe5uXIrAGfZjdq2RjC" />
+              <img src="https://s.cornershopapp.com/product-images/4456401.jpg?versionId=pTLQK2I43EAQLVfe5uXIrAGfZjdq2RjC" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Jalapeños</ion-checkbox>
+            <ion-text justify="space-between">Jalapeños</ion-text>
           </ion-item>
 
           <ion-item lines="none">
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://sagal.com.co/cdn/shop/products/Jamon-Premium-de-Cerdo_grande.jpg?v=1608598839" />
+              <img src="https://sagal.com.co/cdn/shop/products/Jamon-Premium-de-Cerdo_grande.jpg?v=1608598839" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Jamón</ion-checkbox>
+            <ion-text justify="space-between">Jamón</ion-text>
           </ion-item>
 
           <ion-item>
             <ion-thumbnail slot="start">
-              <img alt="Silhouette of mountains" src="https://images.squarespace-cdn.com/content/v1/5f19e52b36e37243e9978dce/1596042198558-0YKLW4KE40B76RFC9LL8/CRUDOSMADURADOS3.jpg" />
+              <img src="https://images.squarespace-cdn.com/content/v1/5f19e52b36e37243e9978dce/1596042198558-0YKLW4KE40B76RFC9LL8/CRUDOSMADURADOS3.jpg" />
             </ion-thumbnail>
-            <ion-checkbox justify="space-between">Salami</ion-checkbox>
+            <ion-text justify="space-between">Salami</ion-text>
           </ion-item>
         </ion-list>
       </ion-card-content>
