Shopping car added

--- a/src/app/catalogo/catalogo.page.html
+++ b/src/app/catalogo/catalogo.page.html
@@ -4,7 +4,7 @@
       <ion-buttons slot="start">
         <ion-menu-button menu="main-menu"></ion-menu-button>
       </ion-buttons>
-      <ion-buttons slot="primary" expand="block" [routerLink]="['/']">
+      <ion-buttons slot="primary" expand="block" [routerLink]="['/carrito-compras']">
         <ion-icon slot="end" name="cart"></ion-icon>
       </ion-buttons>
       <img  class="centered-header-image" src="/assets/Images/Menu.png" />
