--- a/src/app/pide-en-linea/pide-en-linea.page.html
+++ b/src/app/pide-en-linea/pide-en-linea.page.html
@@ -15,7 +15,7 @@
       <ion-text style="color:#fed49c"><sub><b>Dirección *</b></sub></ion-text>
       <ion-list>
         <ion-item>
-          <ion-select [(ngModel)]="tipoVia" name="tipoVia" label="Tipo de vía" label-placement="floating" required>
+          <ion-select [(ngModel)]="tipoVia" name="via" label="Tipo de vía" label-placement="floating" required>
             <ion-select-option value="Autopista">Autopista</ion-select-option>
             <ion-select-option value="Avenida">Avenida</ion-select-option>
             <ion-select-option value="Avenida Calle">Avenida Calle</ion-select-option>
@@ -27,18 +27,18 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-input [(ngModel)]="numero" name="numero *" style="width: 30%" placeholder="Número" required></ion-input>
+          <ion-input [(ngModel)]="numero" name="number" style="width: 30%" placeholder="Número *" required></ion-input>
           <ion-text style="width: 30px">#</ion-text>
-          <ion-input [(ngModel)]="complemento1" name="complemento1" style="width: 35%" placeholder="Comp. 1 *"></ion-input>
+          <ion-input [(ngModel)]="complemento1" name="comp1" style="width: 35%" placeholder="Comp. 1 *"></ion-input>
           <ion-text style="width: 30px">-</ion-text>
-          <ion-input [(ngModel)]="complemento2" name="complemento2" style="width: 35%" placeholder="Comp. 2 *"></ion-input>
+          <ion-input [(ngModel)]="complemento2" name="comp2" style="width: 35%" placeholder="Comp. 2 *"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input [(ngModel)]="barrio" name="barrio" label="Barrio *" labelPlacement="floating" placeholder="Ejemplo: Suba Gaitana" required></ion-input>
+          <ion-input [(ngModel)]="barrio" name="neighbor" label="Barrio *" labelPlacement="floating" placeholder="Ejemplo: Suba Gaitana" required></ion-input>
         </ion-item>
         <ion-text style="color:#fed49c"><sub><b>Tipo de Inmueble</b></sub></ion-text>
         <ion-item>
-          <ion-select [(ngModel)]="tipoInmueble" name="tipoInmueble" label="Seleccionar" label-placement="floating">
+          <ion-select [(ngModel)]="tipoInmueble" name="inmueble" label="Seleccionar" label-placement="floating">
             <ion-select-option value="Apartamento">Apartamento</ion-select-option>
             <ion-select-option value="Casa">Casa</ion-select-option>
             <ion-select-option value="Edificio">Edificio</ion-select-option>
@@ -48,7 +48,7 @@
         </ion-item>
         <ion-text style="color:#fed49c"><sub><b>Bloque o Interior</b></sub></ion-text>
         <ion-item>
-          <ion-select [(ngModel)]="bloqueInterior" name="bloqueInterior" label="Seleccionar" label-placement="floating">
+          <ion-select [(ngModel)]="bloqueInterior" name="interior" label="Seleccionar" label-placement="floating">
             <ion-select-option value="Manzana">Manzana</ion-select-option>
             <ion-select-option value="Zona">Zona</ion-select-option>
             <ion-select-option value="Bloque">Bloque</ion-select-option>
@@ -56,11 +56,11 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-input [(ngModel)]="detallesAdicionales" name="detallesAdicionales" placeholder="Ejemplo: # de torre, etc."></ion-input>
+          <ion-input [(ngModel)]="detallesAdicionales" name="adicionales" placeholder="Ejemplo: # de torre, etc."></ion-input>
         </ion-item>
         <ion-text style="color:#fed49c"><sub><b>Instrucciones para el repartidor</b></sub></ion-text>
         <ion-item>
-          <ion-input [(ngModel)]="instruccionesRepartidor" name="instruccionesRepartidor" style="width: 100%; height: 50%;" placeholder="Tocar el timbre, etc."></ion-input>
+          <ion-input [(ngModel)]="instruccionesRepartidor" name="repartidor" style="width: 100%; height: 50%;" placeholder="Tocar el timbre, etc."></ion-input>
         </ion-item>
         <ion-text style="color:#fed49c"><sub><b>Los campos con * son requeridos!</b></sub></ion-text>
         <br><br>
