--- a/src/app/info-usuarios/info-usuarios.page.html
+++ b/src/app/info-usuarios/info-usuarios.page.html
@@ -19,7 +19,8 @@
             <ion-avatar aria-hidden="true" slot="start">
               <img alt="" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
             </ion-avatar>
-            <ion-label ><b>Nombre: </b>{{dato.nombre}}<br><br><b>Email: </b>{{dato.email}} <br><br><b>Perfil: </b>{{dato.perfil}} </ion-label>
+            <!-- <ion-text></ion-text> -->
+            <ion-label ><b>Nombre: </b><br>{{dato.nombre}}<br><br><b>Email: </b><br>{{dato.email}} <br><br><b>Perfil: </b><br>{{dato.perfil}} </ion-label>
 
           </ion-item>
         </ion-list>
