--- a/src/app/catalogo-pedido/catalogo-pedido.page.html
+++ b/src/app/catalogo-pedido/catalogo-pedido.page.html
@@ -83,7 +83,7 @@
           </ion-list>
         </ion-card-content>
       </ion-card>
-      <ion-button expand="full" type="submit">Ir al carrito de compras</ion-button>
+      <ion-button expand="full" type="submit" color="warning">Ir al carrito de compras</ion-button>
     </form>
   </ion-content>
   </div>
